Version 4.1

Versioning: Latest file will be in blue. Deleted files will be in red.
Versioning: Version enabled buckets will be displayed in green.
New Command Line Options: put, get, delete, makebucket, rmbucket, and lsbuckets.

Features:

1. Tier buckets to and from Amazon Glacier.
2. Sync files to and from S3 storage.
3. Stream music.
4. Text editor.
5. Modify Bucket and Object ACL's.
6. Take screen shots and upload them to your bucket.
7. Bucket versioning and life cycles.
8. Graphical and console based background syncing.
9. Store multiple Amazon S3 accounts.
10. Image viewer.
11. Migrate buckets between S3 accounts.
12. Bucket search.
13. Performance testing with graphs.
14. Command Line options.


Command Line Options: put, get, delete, makebucket, rmbucket, and lsbuckets:  

java -jar CloudExplorer.jar put filename bucket
java -jar CloudExplorer.jar get filename bucket
java -jar CloudExplorer.jar delete filename bucket

#List bucket contents
java -jar CloudExplorer.jar ls bucket

#List buckets
java -jar CloudExplorer.jar lsbuckets

#Delete a bucket
java -jar CloudExplorer.jar rmbucket bucket

*Please note that Cloud Explorer will use the first account listed in the config file*